syntax = "proto3";

package reward.v1;
option go_package = "reward/v1;rewardV1";

service RewardService {
  rpc PreReward(PreRewardRequest) returns (PreRewardResponse);
  rpc GetReward(GetRewardRequest) returns (GetRewardResponse);
}

message PreRewardRequest {
  string biz = 1;
  int64 biz_id = 2;
  string biz_name = 3;
  // 被打赏的人，也就是收钱的那个
  int64 target_uid = 4;
  // 打赏的人，也就是付钱的那个
  int64 uid = 5;
  // 打赏金额
  int64 amt = 6;
}

message PreRewardResponse {
  int64 rid = 1;
  string code_url = 2;
}

message GetRewardRequest {
  int64 rid = 1;
  int64 uid = 2;
}

// 对于调用这个服务的人来说，我只需要知道这比订单的状态
message GetRewardResponse {
  RewardStatus status = 1;
}

enum RewardStatus {
  RewardStatusUnknown = 0;
  RewardStatusInit = 1;
  RewardStatusPayed = 2;
  RewardStatusFailed = 3;
}